# Philosophers

./: .gitignore  .gitmodules  copy_to_subject.sh  init_githooks.sh
.githooks/: pre-commit  pre-push
doc/: philo_update.pu  request-fork.pu
ft_actor/: Makefile  ft_actor.c  ft_actor.h  ft_actor_msg.c  ft_actor_msg.h  ft_queue.c  ft_queue.h
philo/: Makefile  log
philo/inc/: args.h  main.h  philo_define.h
philo/inc/actors/: fork_actor.h  monitor_actor.h  philo_actor.h  sv_actor.h  system.h  system_create.h
philo/inc/actors/fork/: fork_actor.h
philo/inc/actors/philo/: philo_actor.h
philo/inc/non_actors/: fork.h
philo/inc/utils/: actor.h  get_elapsed_ms.h  matrix.h  message.h  philo_args.h  philo_atoi.h  philo_calloc.h  philo_msg.h  philo_utils.h  queue.h
philo/libs/ft_actor/: Makefile  _ft_actor_loop.c  _ft_actor_set_parent.c  _ft_actor_tell.c  ft_actor.c  ft_actor.h  ft_actor_calloc.c  ft_actor_calloc.h  ft_actor_msg.c  ft_actor_msg.h  ft_queue.c  ft_queue.h  ft_usleep.c  ft_usleep.h
philo/srcs/: main.c  test.c
philo/srcs/actors/: system.c  system_create.c  system_destroy.c  system_run.c  system_start.c
philo/srcs/utils/: _actor_functions.c  actor.c  free_actor.c  get_elapsed_ms.c  matrix.c  message.c  philo_atoi.c  philo_calloc.c  philo_isdegit.c  philo_memset.c  philo_msg.c  queue.c
philo/tests/: test_all.c
philo/tests/inc/: test_util.h
philo/tests/utils/: test_queue.c
prototype/philo-py/: pyproject.toml
prototype/philo-py/src/philo_py/: main.py
prototype/philo-py/src/philo_py/actors/: fork.py  msg.py  philo.py  supervisor.py
(+60 files in other folders)
