[project]
name = "philo-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Takuma Tsubo",email = "ttsubo@c4r2s12.42tokyo.jp"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pykka (>=4.2.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "philo_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
